fix dark mode switch icon

--- a/src/shared/web-components/nav-menu/nav-menu.component.scss
+++ b/src/shared/web-components/nav-menu/nav-menu.component.scss
@@ -28,13 +28,15 @@ button {
 .slider:before {
     position: absolute;
     content: "";
-    height: 20px;
+    height: 10px;
     width: 20px;
-    left: 8px;
-    bottom: 4px;
+    left: 10px;
+    bottom: 7px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
+    border-radius: 10px 10px 0 0 !important;
+    transform: rotate(125deg);
 }
 
 input:checked+.slider {
